[gd_scene load_steps=3 format=3 uid="uid://bouo875wigdd8"]

[ext_resource type="Script" path="res://src/player/feather/feather.gd" id="1_t5w1c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5mcsp"]
height = 50.0

[node name="Feather" type="Node2D"]
script = ExtResource("1_t5w1c")

[node name="FlightTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 53

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5mcsp")
disabled = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0

[connection signal="timeout" from="FlightTimer" to="." method="_on_flight_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
